Fix issue processwire/processwire-issues#597 allow radio button labels to wrap when needed

--- a/wire/modules/Inputfield/InputfieldRadios/InputfieldRadios.css
+++ b/wire/modules/Inputfield/InputfieldRadios/InputfieldRadios.css
@@ -13,7 +13,7 @@
 
 .InputfieldRadios ul li label {
 	display: inline-block;
-	white-space: nowrap;
+	/* white-space: nowrap; */
 }
 
 .InputfieldRadios input {
